<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="about_text">Hi, I\'m Roma! I\'m currently living in&#160;Ukraine, which I&#160;absolutely love! I\'ve been crazy about board games for more than 10 years! The idea for this app came to&#160;me when I&#160;was playing Star Realms.\n\nI\'m working on this app in&#160;my&#160;spare time. Despite the&#160;terrible events in&#160;my country, I&#160;decided to&#160;keep this app free and not add ads.\n\nIf you want to&#160;make a&#160;donation to&#160;support the&#160;further development of&#160;this app, it&#160;is&#160;highly appreciated. Thank&#160;you so&#160;much, and I&#160;wish you joyful games!</string>
    <string name="about_translators" translatable="false">\ud83c\uddf7\ud83c\uddf4 Andrei Iacob\n\ud83c\uddf5\ud83c\uddf1 Osmine Retro, maiky\n\ud83c\uddea\ud83c\uddf8 ZVirus, rbergara\n\ud83c\uddeb\ud83c\uddf7 Jumar\n\ud83c\uddf5\ud83c\uddf9 Gustavo Araújo\n\ud83c\udde8\ud83c\uddff Adam Novák\n\ud83c\uddf3\ud83c\uddf1 Link Hogthrob (JvD NL)\n\ud83c\udde9\ud83c\uddea Link Hogthrob (JvD NL)\n\ud83c\uddee\ud83c\uddf9 Silvia Avvertenza\n\ud83c\uddf9\ud83c\uddf7 İpek Demir\n\ud83c\udded\ud83c\uddfa PiEm14B\n\ud83c\uddf8\ud83c\uddea Lucas&#160;C, Tarek&#160;Auf&#160;der&#160;Strasse\n\ud83c\uddfb\ud83c\uddf3 Thien Loc, Hiep Tran\n\ud83c\udde7\ud83c\uddec Godlev\n\ud83c\uddec\ud83c\uddf7 Giannis Ioannidis\n\ud83c\udded\ud83c\uddf7 Antonio\n\ud83c\udde8\ud83c\uddf3 Maurice Wang\n\ud83c\udde9\ud83c\uddf0 Lucas&#160;C</string>
    <string name="about_translators_title">Awesome translators</string>
    <string name="action_donate">Support Score Counter</string>
    <string name="action_save">Save</string>
    <string name="app_name">Score Counter</string>
    <string name="common_back">Back</string>
    <string name="common_continue">Continue</string>
    <string name="common_counters">Counters</string>
    <string name="common_decrease">Decrease</string>
    <string name="common_dice">Dice</string>
    <string name="common_edit">Edit</string>
    <string name="common_increase">Increase</string>
    <string name="common_more">More</string>
    <string name="common_set">Set value</string>
    <string name="common_settings">Settings</string>
    <string name="common_vibrate">Vibrate on tap</string>
    <string name="counter_added">Counter added</string>
    <string name="counter_default_name">Counter</string>
    <string name="counter_deleted">Counter deleted</string>
    <string name="counter_details_default_value">Reset value</string>
    <string name="counter_details_name">Counter name</string>
    <string name="counter_details_step">Increment</string>
    <string name="counter_details_value">Value</string>
    <string name="counters_empty_message">To add a new counter, tap&#160;the&#160;<b>+</b>&#160;icon</string>
    <string name="delete">Delete</string>
    <string name="dialog_confirmation_question">Oh, you\'re sure about that?</string>
    <string name="dialog_elektu_confirm">A small browser page will pop up to&#160;help you choose someone from a&#160;group.\n\nCreated by Julien&#160;Bellue</string>
    <string name="dialog_no">No</string>
    <string name="dialog_predefined_steps">☃︎: you can tweak these values in&#160;the Settings</string>
    <string name="dialog_support_me_content"><b>Enjoying Score Counter? Support me with a coffee!</b>\n\nHi, I\'m Roma! I\'m based in&#160;Ukraine and I\'m working on&#160;this&#160;app in&#160;my spare time. I\'m&#160;committed to&#160;keeping Score&#160;Counter free forever.\n\nYour support helps me keep this app updated and&#160;free for&#160;everyone worldwide.</string>
    <string name="dialog_support_me_remind_me_later">Later</string>
    <string name="dialog_yes">Yes</string>
    <string name="dice_empty_state">To roll the&#160;dice, just tap anywhere on the&#160;screen</string>
    <string name="dice_roll_prefix">Roll(s):</string>
    <string name="dice_sides">Custom dice sides</string>
    <string name="dice_sum_prefix">Sum:</string>
    <string name="donation_title">Help keep this&#160;app ad-free!</string>
    <string name="easter_wave" translatable="false">\ud83d\udc4b Hi, I\'m Roma too!</string>
    <string name="history_empty_message">You can check out the&#160;changes that were made here</string>
    <string name="history_subtitle">cleared after restart of the&#160;app&#160;\u26a0\ufe0f</string>
    <string name="menu_add_new_counter">Add counter</string>
    <string name="menu_delete_all_counters">Delete all counters</string>
    <string name="menu_elektu">Who goes first?</string>
    <string name="menu_history">History</string>
    <string name="menu_reset_all_counters">Reset all counters</string>
    <string name="message_app_not_found">It seems there isn\'t an app that can handle this action.</string>
    <string name="message_error_generic">It looks like there\'s been a technical issue.</string>
    <string name="message_top_logic_changed">Changed title display logic</string>
    <string name="message_one_more_counter">One more</string>
    <string name="message_thank_you">Thanks for your support!&#160;\ud83d\udc99</string>
    <string name="message_you_can_use_long_press">Try a long tap on <b>+/-</b> side</string>
    <string name="setting_help_translate">Help translate the&#160;app</string>
    <string name="setting_share">Share Android app link</string>
    <string name="settings_about">About Score Counter</string>
    <string name="settings_animate_roll">Dice roll animation</string>
    <string name="settings_appearance">Appearance</string>
    <string name="settings_change_language">Language</string>
    <string name="settings_counter_title">Counter (long press)</string>
    <string name="settings_feedback">Contact developer</string>
    <string name="settings_privacy_policy">Privacy policy</string>
    <string name="settings_rate_app">Rate this app on Google Play</string>
    <string name="settings_shake_to_roll">Shake to&#160;roll the&#160;dice</string>
    <string name="settings_sound">Play sound</string>
    <string name="settings_stay_awake">Keep screen awake</string>
    <string name="settings_switch_tap_logic">Swap short and long press</string>
    <string name="share_snippet">No need to&#160;look for a&#160;pen and paper. Get the&#160;free Android&#160;app</string>
    <string name="simple_edit_value_hint">Enter value</string>
    <string name="action_one_time_support">One-Time Support</string>
    <string name="action_monthly_support">Monthly Support</string>
    <string name="tip_cancel_any_time">Cancel any time</string>
    <string name="tip_alternative_options">OR check out alternative options to tip:</string>

    <string name="automatically_sort_counters">Automatically sort counters</string>
    <string name="turn_on_auto_sorting_3s">Turn on auto-sorting (3s)</string>
    <string name="the_highest_score_at_the_top">The highest score at the top</string>
    <string name="top_bar_content">Top bar content</string>
    <string name="show_the_highest_score">\ud83c\udfc6&#160;&#160;&#160;&#160;Show the highest score</string>
    <string name="show_the_lowest_score">\ud83d\udcc9&#160;&#160;&#160;&#160;Show the lowest score</string>
    <string name="show_the_total_score">\u2211&#160;&#160;&#160;&#160;Show the total score</string>
</resources>
