<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:layout_height="256dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/item_view"
        style="@style/Widget.MaterialComponents.CardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="@dimen/padding_normal"
        android:layout_marginTop="@dimen/spacing_micro"
        android:layout_marginEnd="@dimen/padding_normal"
        android:layout_marginBottom="@dimen/spacing_micro"
        app:cardCornerRadius="8dp"
        app:cardElevation="1dp"
        tools:cardBackgroundColor="#F2B04B">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#0DFFFFFF"
                android:minHeight="48dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_counter_name"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:contentDescription="@string/counter_details_name"
                    android:ellipsize="end"
                    android:fontFamily="@font/o600"
                    android:foreground="@drawable/ripple"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:paddingStart="@dimen/padding_normal"
                    android:textAppearance="?attr/textAppearanceHeadline5"
                    tools:text="@tools:sample/first_names" />

                <ImageView
                    android:id="@+id/iv_counter_edit"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/common_edit"
                    android:foreground="@drawable/ripple"
                    android:gravity="end"
                    android:padding="@dimen/spacing_normal"
                    android:scaleType="center"
                    android:src="@drawable/ic_edit" />
            </LinearLayout>

            <FrameLayout
                android:id="@+id/counter_interaction_area"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:clickable="true"
                android:focusable="true"
                android:foreground="@drawable/ripple">

                <TextView
                    android:id="@+id/tv_counter_value"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:clickable="false"
                    android:contentDescription="@string/counter_details_value"
                    android:fontFamily="@font/mono"
                    android:foreground="@android:color/transparent"
                    android:gravity="center"
                    android:includeFontPadding="false"
                    android:lines="1"
                    android:paddingHorizontal="@dimen/padding_large"
                    android:textColor="?android:attr/textColorPrimary"
                    app:autoSizeMaxTextSize="128sp"
                    app:autoSizeMinTextSize="14sp"
                    app:autoSizeStepGranularity="2sp"
                    app:autoSizeTextType="uniform"
                    tools:text="0" />

                <ImageView
                    android:id="@+id/iv_decrease"
                    android:layout_width="@dimen/button_icon_size"
                    android:layout_height="@dimen/button_icon_size"
                    android:layout_gravity="start|center_vertical"
                    android:layout_marginStart="@dimen/spacing_big"
                    android:clickable="false"
                    android:contentDescription="@string/common_decrease"
                    android:src="@drawable/ic_subtract" />

                <ImageView
                    android:id="@+id/iv_increase"
                    android:layout_width="@dimen/button_icon_size"
                    android:layout_height="@dimen/button_icon_size"
                    android:layout_gravity="end|center_vertical"
                    android:layout_marginEnd="@dimen/spacing_big"
                    android:clickable="false"
                    android:contentDescription="@string/common_increase"
                    android:src="@drawable/ic_add" />
            </FrameLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
</FrameLayout>