<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ua.napps.scorekeeper.log.LogActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        style="@style/Widget.MaterialComponents.AppBarLayout.Surface"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:liftOnScroll="true">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_log_main"
            style="@style/ToolBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="?attr/actionBarSize"
            app:subtitle="@string/history_subtitle"
            app:title="@string/menu_history" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_log_main"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/spacing_normal"
        android:clipToPadding="false"
        android:overScrollMode="ifContentScrolls"
        android:paddingBottom="180dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_bias="0.0"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:visibility="gone"
        tools:listitem="@layout/item_log_entry" />

    <ImageView
        android:id="@+id/iv_history"
        android:layout_width="@dimen/empty_state_icon_size"
        android:layout_height="@dimen/empty_state_icon_size"
        android:contentDescription="@string/history_empty_message"
        android:layout_marginBottom="@dimen/spacing_normal"
        android:src="@drawable/empty_log"
        android:rotationY="@integer/locale_mirror_flip"
        app:layout_constraintBottom_toTopOf="@id/tv_empty_state"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/tv_empty_state"
        style="@style/EmptyStateMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/spacing_xlarge"
        android:text="@string/history_empty_message"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_history" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/g_empty_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:constraint_referenced_ids="tv_empty_state,iv_history" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_close"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:contentDescription="@string/common_back"
        android:layout_marginVertical="@dimen/spacing_xlarge"
        app:backgroundTint="?attr/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_close" />
</androidx.constraintlayout.widget.ConstraintLayout>