<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:overScrollMode="never"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/padding_large">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="172dp"
            android:background="?attr/colorPrimaryVariant">

            <ImageView
                android:id="@+id/iv_donate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center|top"
                android:contentDescription="@string/action_donate"
                android:rotationY="@integer/locale_mirror_flip"
                android:scaleType="centerCrop"
                android:src="@drawable/donate" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_margin="@dimen/spacing_normal"
                android:background="#B5D99C"
                android:ellipsize="end"
                android:fontFamily="@font/decor"
                android:padding="@dimen/spacing_micro"
                android:text="@string/action_donate"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="@color/colorSecondary" />
        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingHorizontal="@dimen/padding_normal"
            android:paddingTop="@dimen/padding_normal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:lineSpacingMultiplier="1.2"
                android:paddingHorizontal="@dimen/padding_large"
                android:text="@string/dialog_support_me_content"
                android:textAppearance="?attr/textAppearanceBody2" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_donate_it"
                style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginHorizontal="@dimen/spacing_normal"
                android:layout_marginTop="@dimen/spacing_large"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:minHeight="@dimen/list_single_line_min_height"
                android:paddingHorizontal="@dimen/padding_large"
                android:text="@string/action_donate"
                android:textAppearance="?attr/textAppearanceSubtitle1"
                android:textColor="?attr/colorOnPrimary"
                app:cornerRadius="@dimen/material_button_full_round_corner_radius" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_remind_later"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/spacing_big"
                android:paddingHorizontal="@dimen/padding_large"
                android:text="@string/dialog_support_me_remind_me_later"
                android:textAppearance="?attr/textAppearanceBody2"
                app:cornerRadius="@dimen/material_button_full_round_corner_radius" />

        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>